crates/arity-parser/tests/snapshots/parser_snapshots__air_error_call_side_by_side_arguments_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..68
  COMMENT@0..59 "# Can't have two argu ..."
  NEWLINE@59..60 "\n"
  CALL_EXPR@60..67
    IDENT@60..62 "fn"
    LPAREN@62..63 "("
    ARG_LIST@63..66
      ARG@63..64
        IDENT@63..64 "a"
      WHITESPACE@64..65 " "
      ARG@65..66
        IDENT@65..66 "b"
    RPAREN@66..67 ")"
  NEWLINE@67..68 "\n"
