crates/arity-parser/tests/snapshots/parser_snapshots__air_error_call_side_by_side_arguments_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected ',' between arguments",
        start: 65,
        end: 66,
    },
]
