crates/arity-parser/tests/snapshots/parser_snapshots__air_error_namespace_call_lhs_triple_colon_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "namespace operator requires a package name on the left-hand side",
        start: 3,
        end: 6,
    },
]
