crates/arity-parser/tests/snapshots/parser_snapshots__air_error_namespace_chained_double_colon_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "namespace operator chaining is not allowed",
        start: 4,
        end: 6,
    },
]
