crates/arity-parser/tests/snapshots/parser_snapshots__air_error_parenthesized_expression_empty_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..2
  ERROR@0..2
    LPAREN@0..1 "("
    RPAREN@1..2 ")"
