crates/arity-parser/tests/snapshots/parser_snapshots__air_error_parenthesized_expression_empty_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected expression after '('",
        start: 0,
        end: 1,
    },
]
